force-app/main/default/objects/FEC_Statement__c/FEC_Statement__c.object-meta.xml
<CustomObject>
    <label>Statement</label>
    <nameField>
        <displayFormat>SN - {0}</displayFormat>
        <label>Statement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Statement</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>