force-app/main/default/objects/FEC_Statement__c/fields/FEC_Beginning_Balance__c.field-meta.xml
<CustomField>
    <fullName>FEC_Beginning_Balance__c</fullName>
    <label>Beginning Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>