force-app/main/default/objects/FEC_Statement__c/fields/FEC_Billing_Cycle__c.field-meta.xml
<CustomField>
    <fullName>FEC_Billing_Cycle__c</fullName>
    <label>Billing Cycle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>