force-app/main/default/objects/FEC_Statement__c/fields/FEC_Current_Payment_Due__c.field-meta.xml
<CustomField>
    <fullName>FEC_Current_Payment_Due__c</fullName>
    <label>Current Payment Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>