force-app/main/default/objects/FEC_Statement__c/fields/FEC_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>FEC_Date_Time__c</fullName>
    <label>Date Time</label>
    <type>Date</type>
</CustomField>