force-app/main/default/objects/FEC_Statement__c/fields/FEC_Debit_Amount__c.field-meta.xml
<CustomField>
    <fullName>FEC_Debit_Amount__c</fullName>
    <label>Debit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>