force-app/main/default/objects/FEC_Statement__c/fields/FEC_End_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>