force-app/main/default/objects/FEC_Statement__c/fields/FEC_Minimum_Payment_Due__c.field-meta.xml
<CustomField>
    <fullName>FEC_Minimum_Payment_Due__c</fullName>
    <label>Minimum Payment Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>