force-app/main/default/objects/FEC_Statement__c/fields/FEC_Next_Statement_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Next_Statement_Date__c</fullName>
    <label>Next Statement Date</label>
    <type>Date</type>
</CustomField>