force-app/main/default/objects/FEC_Statement__c/fields/FEC_Payment_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Payment_Due_Date__c</fullName>
    <label>Payment Due Date</label>
    <type>Date</type>
</CustomField>