force-app/main/default/objects/FEC_Statement__c/fields/FEC_Ref_Number__c.field-meta.xml
<CustomField>
    <fullName>FEC_Ref_Number__c</fullName>
    <label>Ref Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>