force-app/main/default/objects/FEC_Statement__c/fields/FEC_Started_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Started_Date__c</fullName>
    <label>Started Date</label>
    <type>Date</type>
</CustomField>