force-app/main/default/objects/FEC_Statement__c/fields/FEC_Statement_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Statement_Date__c</fullName>
    <label>Statement Date</label>
    <type>Date</type>
</CustomField>