force-app/main/default/objects/FEC_Statement__c/fields/FEC_Transaction_Description__c.field-meta.xml
<CustomField>
    <fullName>FEC_Transaction_Description__c</fullName>
    <label>Transaction Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>