force-app/main/default/objects/FEC_Statement__c/fields/FEC_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Transaction_Type__c</fullName>
    <label>Transaction Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>