force-app/main/default/objects/FEC_Statement__c/fields/FEC_Trasaction_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Trasaction_Date__c</fullName>
    <label>Trasaction Date</label>
    <type>Date</type>
</CustomField>